release: promote Ollama-only development evaluation (#77)
* feat: use tuned Ollama for development release eval

(cherry picked from commit e986ee8bb17772032adcdc19f8e616b46986c5ff)

* fix: preserve Ollama Modelfile line endings

(cherry picked from commit ff3f5142f7a4310b37ca64aec39948894d6e8b0c)